# a_lot_zombies

./: Cargo.toml  resources.txt
assets/models/: Player.gltf  landscape.gltf  player.glb
characters/Animations/: idle.fbx  jump.fbx  run.fbx
characters/Model/: characterMedium.fbx
src/: main.rs
src/player/: mod.rs  systems.rs
src/setup/: components.rs  mod.rs  resources.rs  systems.rs
