[package]
name = "a_lot_zombies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_asset = "0.12.1"
bevy_pbr = "0.12.1"
bevy_audio = "0.12.1"
bevy_scene = "0.12.1"
bevy_render = "0.12.1"

# File formats:
png = "0.17.10"
ktx2 = "0.3.0"
bevy_gltf_blueprints = "0.3.3"

